--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r dev-requirements.txt  # Include testing dependencies
+        pip install -r requirements.txt  # Include testing dependencies
 
     - name: Test Dockerfile build
       run: pytest tests/test_app.py
