--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt  # Include testing dependencies
-
+        pip install docker  # Ensure the docker library is installed
+  
     - name: Test Dockerfile build
       run: pytest tests/test_Dockerfile.py
