--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,14 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        node-version: '20'
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: 3.12
+        node-version: '20'
 
     - name: Install dependencies
       run: |
