--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,12 @@
-name: Docker containers and Dockerfile tests
+name: Docker and Pytest CI
 
 on:
   push:
     branches:
-      - main  # Run on push to the main branch
-      - Github-Actions  # Run on push to the Github-Actions branch
+      - main
   pull_request:
     branches:
-      - main  # Run on pull requests to the main branch
-      - Github-Actions  # Run on push to the Github-Actions branch
+      - main
 
 jobs:
   test:
@@ -22,29 +20,25 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-      with:
-        node-version: '20'
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: 3.12
-        node-version: '20'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Include testing dependencies
-        pip install docker  # Ensure the docker library is installed
+        pip install -r requirements.txt
+        pip install docker  # Install Docker library for Python
 
-
-    - name: Install Docker Compose
+    - name: Run tests with detailed output
       run: |
-        sudo apt-get update
-        sudo apt-get install -y docker-compose
-  
-    - name: Test Dockerfile build
-      run: pytest tests/test_Dockerfile.py
+        mkdir -p test-reports
+        pytest tests --junitxml=test-reports/results.xml -v
 
-    - name: Test Docker containers
-      run: pytest tests/test_DockerContainers.py
+    - name: Upload test results
+      uses: actions/upload-artifact@v3
+      with:
+        name: test-results
+        path: test-reports/results.xml
