--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,14 @@
-name: Docker and Pytest CI
+name: Docker containers and Dockerfile tests
 
 on:
   push:
     branches:
-      - main
+      - main  # Run on push to the main branch
+      - Github-Actions  # Run on push to the Github-Actions branch
   pull_request:
     branches:
-      - main
+      - main  # Run on pull requests to the main branch
+      - Github-Actions  # Run on push to the Github-Actions branch
 
 jobs:
   test:
@@ -29,16 +31,26 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install docker  # Install Docker library for Python
+        pip install -r requirements.txt  # Include testing dependencies
+        pip install docker  # Ensure the docker library is installed
 
-    - name: Run tests with detailed output
+    - name: Install Docker Compose
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker-compose
+
+    - name: Test Dockerfile build
       run: |
         mkdir -p test-reports
-        pytest tests --junitxml=test-reports/results.xml -v
+        pytest tests/test_Dockerfile.py --junitxml=test-reports/results_dockerfile.xml -v
+
+    - name: Test Docker containers
+      run: |
+        mkdir -p test-reports
+        pytest tests/test_DockerContainers.py --junitxml=test-reports/results_containers.xml -v
 
     - name: Upload test results
       uses: actions/upload-artifact@v3
       with:
         name: test-results
-        path: test-reports/results.xml
+        path: test-reports/
