--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
 
 
   db: #another container for postgres db
-    image: postgres
+    image: posgres
     environment: 
       POSTGGRES_DB: postgres
       POSTGRES_USER: user
