--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,23 +34,14 @@ jobs:
         pip install -r requirements.txt  # Include testing dependencies
         pip install docker  # Ensure the docker library is installed
 
+
     - name: Install Docker Compose
       run: |
         sudo apt-get update
         sudo apt-get install -y docker-compose
-
+  
     - name: Test Dockerfile build
-      run: |
-        mkdir -p test-reports
-        pytest tests/test_Dockerfile.py --junitxml=test-reports/results_dockerfile.xml -v
+      run: pytest tests/test_Dockerfile.py
 
     - name: Test Docker containers
-      run: |
-        mkdir -p test-reports
-        pytest tests/test_DockerContainers.py --junitxml=test-reports/results_containers.xml -v
-
-    - name: Upload test results
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-results
-        path: test-reports/
+      run: pytest tests/test_DockerContainers.py
