--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - main  # Run on push to the main branch
       - Github-Actions  # Run on push to the Github-Actions branch
+      - reports_on_map
   pull_request:
     branches:
       - main  # Run on pull requests to the main branch
       - Github-Actions  # Run on push to the Github-Actions branch
+      - reports_on_map
 
 jobs:
   test:
