Added registering user test to ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,3 +48,6 @@ jobs:
 
     - name: Test HTTP Connection
       run: pytest tests/Test_HTTP_Endpoints.py
+
+    - name: Test Register User
+      run: pytest tests/Test_Register_User.py
