--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,23 +30,24 @@ jobs:
 
     - name: Install dependencies
       run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Include testing dependencies
-          pip install docker  # Ensure the docker library is installed
-  
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt  # Include testing dependencies
+        pip install docker  # Ensure the docker library is installed
+
+
     - name: Install Docker Compose
       run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
+        sudo apt-get update
+        sudo apt-get install -y docker-compose
   
-    - name: Start Docker Containers
-      run: |
-          docker-compose up -d --build
-          docker-compose ps
-  
-    - name: Run All Tests
-      run: pytest tests/
-  
-    - name: Tear Down Docker Containers
-      if: always()
-      run: docker-compose down
+    - name: Test Dockerfile build
+      run: pytest tests/test_Dockerfile.py
+
+    - name: Test Docker containers
+      run: pytest tests/test_DockerContainers.py
+
+    - name: Test HTTP Connection
+      run: pytest tests/Test_HTTP_Endpoints.py
+
+    - name: Test Register User
+      run: pytest tests/Test_Registering_User.py
