--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,10 @@ name: Docker containers and Dockerfile tests
 on:
   push:
     branches:
-      - main  # Run on push to the main branch
-      - Github-Actions  # Run on push to the Github-Actions branch
+      - **  # Run on all branches when code is pushed
   pull_request:
     branches:
-      - main  # Run on pull requests to the main branch
-      - Github-Actions  # Run on push to the Github-Actions branch
+      - **  # Run on all branches when a pull request is opened or updated
 
 jobs:
   test:
